# Writing-Bot-RAG

./: .gitignore  LICENSE.md  NOTICE.md  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
samples/: drive_references_sample.json  gmail_scholar_sample.json
skills/rebuttal-shield/: SKILL.md
skills/writing-bot/: Manual.md  SKILL.md
skills/writing-bot/agents/: openai.yaml
skills/writing-bot/references/: local-rag.md
skills/writing-bot/scripts/: rag_advisor_shield.py  rag_attach_artifact.py  rag_defense_answer_card.py  rag_slide_claim_audit.py  rag_student_defense.py  rag_writing_audit.py  run_local_rag_query.py
src/research_rag/: __init__.py  bot_workflow.py  canonical.py  chunking.py  cli.py  config.py  db.py  defense_route_guard.py  downloader.py  drive_ingest.py  embeddings.py  gmail_ingest.py  indexing.py  maintenance.py  pdf_extract.py  pipeline.py  query.py  report.py  retrieval.py  reviewer_hell.py  works.py
tests/: test_defense_route_guard.py  test_rag_defense_answer_card_wrapper.py  test_rag_slide_claim_audit_wrapper.py  test_reviewer_hell.py  test_skill_bilingual_contract.py
