[project]
name = "writing-bot-rag"
version = "0.1.0"
description = "Writing Bot skill suite with local RAG claim audits and reviewer-response shield workflows."
requires-python = ">=3.10"
dependencies = [
  "pypdf>=5.0.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
gpu = [
  "sentence-transformers>=3.0.0",
  "torch>=2.4.0",
  "numpy>=1.26.0",
  "lancedb>=0.14.0",
  "pyarrow>=16.0.0",
  "rank-bm25>=0.2.2",
]
llm = [
  "openai>=1.0.0",
  "llama-cpp-python>=0.3.0",
]
pdf = [
  "pymupdf>=1.24.0",
]

[project.scripts]
rag = "research_rag.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

